<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/img"
        app:layout_constraintBottom_toTopOf="@+id/edt_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edt_background"/>

    <EditText
        android:id="@+id/edt_Password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/edt_Email"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edt_background"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_Password"
        android:background="@drawable/btn_background"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:background="@drawable/btn_background"/>




</androidx.constraintlayout.widget.ConstraintLayout>
